# SkyPro_HomeWork_3.4.1

./: .gitignore  pyproject.toml
tests/: test_arrs.py
